<resources>
    <!-- -->
    <string name="app_name">GRIT</string>
    <string name="story_prompt">Tell a story about a time you overcame a stressful event.</string>
    <string name="save">Save</string>
    <string name="logo_text">Grit Logo</string>
    <string name="email_hint">Your Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_text">Forgot your password?</string>
    <string name="or_facebook">or Sign in with Facebook</string>
    <string name="not_ready_expore_app">Not ready to Sign up? Explore the app</string>
    <string name="facebook">Facebook</string>
    <string name="word_picker_nav">Word\nPicker</string>
    <string name="story_record_nav">Story\nRecord</string>
    <string name="life_check_nav">Life\nCheck</string>
    <string name="squad_builder_nav">Squad\nBuilder</string>
    <string name="white_nav_desc">Empty Nav</string>
    <string name="dot_nav_desc">Filled Dot Nav</string>
    <string name="word_picker_prompt">Select the words that resonate most with you</string>
    <string name="word_picker_leftarrow">Left Arrow</string>
    <string name="word_picker_rightarrow">Right Arrow</string>
    <string name="word_picker_choice1">Outgoing</string>
    <string name="word_picker_choice2">Credit</string>
    <string name="word_picker_choice3">Fun</string>
    <string name="word_picker_choice4">Outgoing</string>
    <string name="number_one_of_five">1 / 5</string>
    <string name="nunber_two_of_five">2 / 5</string>
    <string name="nunber_three_of_five">3 / 5</string>
    <string name="nunber_four_of_five">4 / 5</string>
    <string name="nunber_five_of_five">5 / 5</string>
    <string name="life_check_question_1">In most ways my life is close to my ideal</string>
    <string name="life_check_question_2">The conditions of my life are excellent</string>
    <string name="life_check_question_3">I am satisfied with my life</string>
    <string name="life_check_question_4">So far I have gotten the important things I want in life</string>
    <string name="life_check_question_5">If I could live my life over, I would change almost nothing</string>
    <string name="number_selector">Number selector</string>
    <string name="squad_directions_top_text">Start Your Squad to help grow your GRIT</string>
    <string name="squad_directions_add">Add at least 3 people you trust to give honest feedback about you. Here\'s how this works:</string>
    <string name="squad_directions_1">1. Squadmats will complete three similar activities</string>
    <string name="squad_directions_2">2. You won\'t see their responses and they won\'t see yours</string>
    <string name="squad_directions_3">3. We aggregate all responses to inform Your Path</string>
    <string name="squad_directions_4">4. Then, you can choose if you want to share any information</string>
    <string name="sqaud_direction_addfrom_facebook">Add Contacts Via Facebook</string>
    <string name="sqaud_direction_addfrom_contacts">Add Contacts Via My Contacts</string>
    <string name="name1">Josheph Kung</string>
    <string name="name2">Robert Smith</string>
    <string name="name3">Jennifer Knapp</string>
    <string name="name4">Sarah Mysore</string>
    <string name="name5">James Huffman</string>
    <string name="send_invite">Send Invite</string>

    <string name="selectDevice">Select Your device</string>
    <string name="action_settings">Disconnect</string>
    <string name="couldnotconnect">Sorry, Could not connect to the Polar device</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetoothOff">Turn Bluetooth On?</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="avg">avg</string>
    <string name="about">About</string>
    <string name="aboutText">
        This app is a simple app that provides connectivity for Polar heart monitor. \nIt only diplays information without complex settings or logging information for jogging.
        No need to start a session or to record data.
        \n\n\n****The Polar device needs to be paired with the phone in android.
    </string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="value_prompt">Is this what you value? The order matters</string>
    <string name="value_stock1">Family</string>
    <string name="value_stock2">Well Being</string>
    <string name="value_stock3">Community</string>
    <string name="one_list">1.</string>
    <string name="two_list">2.</string>
    <string name="three_list">3.</string>
    <string name="goal_directions_top">Let\'s gear you up to meet your Goal!</string>
    <string name="goal_dircetions_middle">Set up a path to meet you goal by completing the next three pages. Here\'s what you will find: </string>
    <string name="goals_directions_bullet1">1.  Choose a method to communicate with your squad</string>
    <string name="goals_directions_bullet2">2.  Set a physical task to keep you on track</string>
    <string name="goals_directions_bullet3">3.  Set a mental task to keep you on track</string>
    <string name="Finish">Finish</string>
    <string name="add_image_desc">add image</string>
    <string name="meetup_path_text">Go to a meetup</string>
    <string name="squadwork_path_text">Workout with Squad</string>
    <string name="hrv_path_text">Track HRV</string>
    <string name="alt_path_text">Clostest Alternative</string>
    <string name="recommend_path_text">Recommended</string>
    <string name="physical_path_prompt">Choose a Physical Path</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="email">Email</string>
    <string name="text">Text</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="HRV">HRV</string>
    <string name="summary">Summary</string>
    <string name="values">Values</string>
    <string name="manage_stress">Stress Management</string>
    <string name="family">Family</string>
    <string name="mission">Mission</string>
    <string name="comms">Communication</string>
    <string name="goals_physical">Physical Goals</string>
    <string name="goals_mental">Mental Goals</string>
    <string name="comms_style">Communications Style</string>
    <string name="mindful_path_text">Mindfulness</string>
    <string name="welcome_beginning">As we get to know each other, you will:</string>
    <string name="welcome1">1. Connect with people you trust</string>
    <string name="welcome2">2. Complete some icebreaking activities</string>
    <string name="welcome3">3. Decide if and how you want to share your data</string>
    <string name="start">Start</string>
    <string name="commit">Commit</string>
    <string name="commitment1">I will grow my ability to</string>
    <string name="commitment2">Manage Stress </string>
    <string name="commitment3">with the help of my squad over the</string>
    <string name="commitment4">next 6 months.</string>
    <string name="outstanding">OUTSTANDING</string>
    <string name="outstanding_text">We combined your results and your squads feedback. View the suggested path to grow your GRIT</string>
    <string name="trophy_desc">Trophy</string>
    <string name="view_path">View Path</string>
    <string name="record_button">Record</string>
    <string name="community">Community</string>
    <string name="community_feedback">We added Community to your top values list. Communitiy includes feelings of fellowship with others as a result of sharing common interest, attitudes or goals.</string>
    <string name="back">Back</string>
    <string name="enter_story">Enter Story Here</string>
    <string name="analyze_me">Analyze Me!</string>
    <string name="video_feedback_desc">video feedback image</string>
    <string name="adjust_mission_hint">Adjust Your Mission</string>
    <string name="adjust_mission_time_hint">Adjust Your Timeframe</string>
    <string name="family_feedback">We added Family to your top values list. Family includes any group of people closely related such as parents, children, uncles, aunts, and cousins who share a common bond.</string>
    <string name="well_being_feedback">We added well-being to your top values list. Well being or wellness relates to the condition of an individuals state; a high level of well being means in some sense the condition is positive, while low well-being is associated with negative happenings.</string>
    <string name="Well_being">Well Being</string>
</resources>
