<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:weightSum="1"
    android:background="@drawable/blue_background">
    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/git_logo"
        android:id="@+id/start_Logo"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:text="@string/welcome_beginning"
        android:layout_marginBottom="25dp"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:id="@+id/welcome1"
        android:textSize="15sp"
        android:text="@string/welcome1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:id="@+id/welcome2"
        android:textSize="15sp"
        android:text="@string/welcome2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/welcome3"
        android:textSize="15sp"
        android:text="@string/welcome3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/sign_up"
        android:id="@+id/start_Button"
        android:text="@string/start"
        android:layout_marginTop="50dp" />

</LinearLayout>
