<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/blue_background"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/outstanding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/outstanding_text"/>

    <ImageView
        android:layout_width="249dp"
        android:layout_height="0dp"
        android:src="@drawable/trophy"
        android:layout_weight="0.82"
        android:layout_gravity="center"
        android:contentDescription="@string/trophy_desc"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_up"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/path_Button"
        android:text="@string/view_path"
        android:textColor="@color/colorPrimary" />

</LinearLayout>