<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    >

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tone_prompt"
            android:text="@string/story_prompt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_alignParentTop="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/tone_prompt"
            android:id="@+id/tone_enter"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sign_up"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_story"
                android:padding="20dp"
                android:id="@+id/watson_tone_text_returned"/>
            <!-- -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#6fdc6f"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:id="@+id/analyze_me"
                android:text="@string/analyze_me"/>
            <View
                android:layout_width="105dp"
                android:layout_height="1dp"
                android:layout_gravity="end"
                android:background="#6fdc6f"
                android:id="@+id/analyze_me_underline"
                />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tone_table"
            android:background="@drawable/sign_up"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/tone_enter"
            android:visibility="invisible"
            >
        </TableLayout>

        <Button
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/sign_up"
            android:id="@+id/tone_save_button"
            android:layout_below="@+id/tone_table"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp" />

    </RelativeLayout>

</ScrollView>
