<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/girtblue"
        android:layout_margin="25dp"
        android:padding="5dp"
        android:elevation="4dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gritgreen"
                android:textSize="35sp"
                android:text="@string/community"
                android:textStyle="bold"
                android:id="@+id/title"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/feedback"
                android:text="@string/community_feedback"
                />
            <Button
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/sign_up"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center"
                android:id="@+id/text_feedback_back"
                android:text="@string/back"/>

        </LinearLayout>

    </ScrollView>


</FrameLayout>